# heart-disease-survival

./: .gitignore  .pre-commit-config.yaml  README.md  entry.py  pyproject.toml  requirements-test.txt  requirements.txt
models/: __init__.py  base.py  features.py  models.py  survival.py  utils.py
tests/: conftest.py  test_base.py  test_features.py
