[tool.poetry]
name = "heart-disease-survival"
version = "0.1.0"
description = ""
authors = ["Dr. Marc Puche Niubó <mpucheniubo@gmail.com>"]
readme = "README.md"
packages = [{include = "heart_disease_survival"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-survival = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
