[tool.poetry]
name = "heart-disease-survival"
version = "0.1.0"
description = ""
authors = ["Dr. Marc Puche Niubó <mpucheniubo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-survival = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]